// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionGroup component should render default action group variant 1`] = `
.pf-c-form__actions {
  display: flex;
  flex-wrap: wrap;
}
.pf-c-form__group.pf-m-action {
  display: block;
  margin-top: 2rem;
}

<ActionGroup
  className=""
>
  <div
    className="pf-c-form__group pf-m-action"
  >
    <div
      className="pf-c-form__actions"
    >
      <div>
        Hello
      </div>
    </div>
  </div>
</ActionGroup>
`;

exports[`ActionGroup component should render horizontal form ActionGroup variant 1`] = `
.pf-c-form__actions {
  display: flex;
  flex-wrap: wrap;
}
.pf-c-form__horizontal-group {
  display: block;
}
.pf-c-form__group.pf-m-action {
  display: block;
  margin-top: 2rem;
}
.pf-c-form.pf-m-horizontal {
  display: grid;
}

<Form
  className=""
  isHorizontal={true}
>
  <form
    className="pf-c-form pf-m-horizontal"
    noValidate={true}
  >
    <ActionGroup
      className=""
    >
      <div
        className="pf-c-form__group pf-m-action"
      >
        <div
          className="pf-c-form__horizontal-group"
        >
          <div
            className="pf-c-form__actions"
          />
        </div>
      </div>
    </ActionGroup>
  </form>
</Form>
`;
